Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -208,7 +208,7 @@ For the test sets only the final images were provided to participants although a
 
 For the space-based datasets the pixel size was set to 0.1 arcsec and 
 a simple Gaussian PSF was applied with a FWHM of 0.18 arcsec.  
-The reference band was SDSS K.  The noise is based on a 1,800 second exposure, a transmission of 0.3, a telescope diameter of 119~cm, a readout noise of 5 electrons per pixel and a sky background of 22.8 magnitudes per sq.arcsec.  
+The reference band was SDSS I.  The noise is based on a 1,800 second exposure, a transmission of 0.3, a telescope diameter of 119~cm, a readout noise of 5 electrons per pixel and a sky background of 22.8 magnitudes per sq.arcsec.  
 We use a simple Gaussian random realization of the noise uncorrelated between pixels.
  
  In the challenge set the limiting magnitude for background sources to 28 in K.   60\% of the cases had no background source and were thus labeled as non-lenses.
